--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,12 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.google.android.gms:play-services-places:10.0.1'
     testCompile 'junit:junit:4.12'
 }
-
-
-
-
 
 
 
